# DaedalusX64-vitaGL

./: .gitignore  README.md  azure-pipelines.yml  build_daedalus.sh  vita.toolchain.cmake
Data/: roms.ini
Data/DaedalusX64/: roms.ini
Data/DaedalusX64/Configs/: Conker's Bad Fur Day.ini  Donkey Kong 64.ini  Star Fox 64.ini  (+2 more)
Launcher/: Makefile  main.c
Launcher/builder/: build.bat
Source/: BuildOptions.h  CMakeLists.txt  stdafx.h
Source/Config/: ConfigOptions.cpp  ConfigOptions.h
Source/Config/Dev/: BuildConfig.h
Source/Config/Profile/: BuildConfig.h
Source/Config/Release/: BuildConfig.h
Source/Core/: CPU.cpp  CPU.h  Cheats.cpp  Cheats.h  DMA.cpp  Dynamo.cpp  FlashMem.cpp  FlashMem.h  HvqmTask.cpp  Interpret.cpp  JpegTask.cpp  Memory.cpp  Memory.h  Memory_Read.inl  Memory_WriteValue.inl  PIF.cpp  R4300.cpp  RE2Task.cpp  ROM.cpp  ROM.h  ROMBuffer.cpp  ROMBuffer.h  ROMImage.cpp  ROMImage.h  RSP_HLE.cpp  RomSettings.cpp  RomSettings.h  Save.cpp  SaveState.cpp
Source/Debug/: DBGConsole.h  Dump.cpp  Dump.h
Source/DynaRec/: AssemblyBuffer.h  AssemblyUtils.h  CodeGenerator.h  DynaRecProfile.cpp  DynaRecProfile.h  Fragment.cpp  Fragment.h  IndirectExitMap.cpp  IndirectExitMap.h  StaticAnalysis.cpp
Source/Graphics/: ColourValue.cpp  GraphicsContext.h  NativePixelFormat.h  NativeTexture.h  PngUtil.cpp  PngUtil.h  TextureFormat.h  TextureTransform.cpp
Source/HLEAudio/: ABI.cpp  ABI1.cpp  ABI2.cpp  ABI3.cpp  ABI3mp3.cpp  ABI_ADPCM.cpp  ABI_Buffers.cpp  ABI_Filters.cpp  ABI_MixerInterleave.cpp  ABI_Resample.cpp  AudioBuffer.cpp  AudioBuffer.h  AudioHLEProcessor.cpp  AudioHLEProcessor.h  ENV_Mixer.cpp  HLEMain.cpp  MUSYX.cpp  Musyx.cpp  NAudio.cpp  NEAD.cpp  Nead.cpp  audiohle.h
Source/HLEGraphics/: BaseRenderer.cpp  BaseRenderer.h  CachedTexture.cpp  ConvertFormats.h  ConvertImage.cpp  DLParser.cpp  DaedalusVtx.h  Microcode.cpp  Microcode.h  N64PixelFormat.h  RDP.h  RDPStateManager.cpp  RDPStateManager.h  TextureCache.cpp  TextureCache.h  TextureInfo.cpp  TextureInfo.h
Source/HLEGraphics/uCodes/: Ucode.cpp  Ucode.h  UcodeDefs.h  Ucode_Beta.h  Ucode_Conker.h  Ucode_DKR.h  Ucode_FB.h  Ucode_GBI0.h  Ucode_GBI1.h  Ucode_GBI2.h  Ucode_GE.h  Ucode_LL.h  Ucode_PD.h  Ucode_S2DEX.h  Ucode_Sprite2D.h
Source/HLEGraphics/uCodesold/: Ucode_PD.h
Source/Input/: InputManager.h
Source/Math/: Math.h  Matrix4x4.cpp  Matrix4x4.h  Vector2.h  Vector3.h  Vector4.h
Source/OSHLE/: patch.cpp  patch_gu_hle.inl  patch_sp_hle.inl  patch_thread_hle.inl  ultra_gbi.h  ultra_mbi.h
Source/Plugins/: GraphicsPlugin.h
Source/SysGL/HLEGraphics/: RendererGL.cpp
Source/SysPSP/: main.cpp
Source/SysPSP/Graphics/: GraphicsContext.cpp  NativeTexturePSP.cpp
Source/SysPSP/HLEAudio/: AudioPluginPSP.cpp
Source/SysPSP/HLEAudio/old/: AudioOutput.cpp  AudioOutput.h.old  AudioPluginPSP.cpp  AudioPluginPSP.h
Source/SysPSP/HLEGraphics/: BlendModes.cpp  BlendModes.h  ColourAdjuster.cpp  ColourAdjuster.h  ConvertVertices.S  GraphicsPluginPSP.cpp  TransformWithColour.S  TransformWithLighting.S  VectorClipping.S
Source/SysPSP/Include/: Platform.h  kubridge.h
Source/SysPSP/PRX/DveMgr/: Makefile  exports.exp  main.c
Source/SysPSP/PRX/ExceptionHandler/: Makefile  main.c
Source/SysPSP/PRX/KernelButtons/: Makefile  main.c
Source/SysPSP/PRX/MediaEngine/: Makefile
Source/SysPSP/UI/: AboutComponent.cpp  AboutComponent.h  AdjustDeadzoneScreen.cpp  AdjustDeadzoneScreen.h  AdvancedOptionsScreen.cpp  AdvancedOptionsScreen.h  CheatOptionsScreen.cpp  CheatOptionsScreen.h  Dialogs.cpp  Dialogs.h  GlobalSettingsComponent.cpp  GlobalSettingsComponent.h  PauseOptionsComponent.cpp  PauseOptionsComponent.h  PauseScreen.cpp  PauseScreen.h  RomPreferencesScreen.cpp  RomPreferencesScreen.h  RomSelectorComponent.cpp  RomSelectorComponent.h  SavestateSelectorComponent.cpp  SavestateSelectorComponent.h  SelectedRomComponent.cpp  SelectedRomComponent.h  SplashScreen.cpp  SplashScreen.h  UIAlignment.h  UICommand.cpp  UICommand.h  UIComponent.cpp  UIComponent.h  UIElement.cpp  UIElement.h  UISetting.cpp  UISetting.h  UISpacer.h
Source/SysPSP/Utility/: AtomicPrimitives.S  BatteryPSP.cpp  Buttons.cpp  CacheUtil.h  DebugMemory.cpp  JobManager.cpp  JobManager.h  PathsPSP.h  exception.cpp
Source/SysVita/: debugScreen.h  debugScreenFont.c  main.cpp
Source/SysVita/Debug/: DBGConsoleVita.cpp  DaedalusAssertVita.cpp
Source/SysVita/DynaRec/: AssemblyUtilsARM.cpp  AssemblyWriterARM.cpp  AssemblyWriterARM.h  CodeBufferManagerARM.cpp  CodeGeneratorARM.cpp  CodeGeneratorARM.h  CodeGeneratorVita.cpp  CodeGeneratorVita.h  DynarecStubARM.S  DynarecTargetARM.h  N64RegisterCacheARM.h
Source/SysVita/DynaRec/MipsPayload/: Makefile  libc.c  license.rif  linker.x  main.c  start.S
Source/SysVita/Graphics/: GraphicsContextVita.cpp  NativeTextureVita.cpp
Source/SysVita/HLEAudio/: AudioOutput.cpp  AudioOutput.h  AudioPluginVita.cpp  AudioPluginVita.h
Source/SysVita/HLEGraphics/: BlendModes.cpp  BlendModes.h  Blender.cpp  ColourAdjuster.cpp  ColourAdjuster.h  FragmentShader.h  GraphicsPluginVita.cpp  RendererLegacy.cpp  RendererLegacy.h  RendererModern.cpp  RendererModern.h  RendererVita.cpp  RendererVita.h
Source/SysVita/HLEGraphics/Combiner/: BlendConstant.cpp  RenderSettings.h
Source/SysVita/Include/: Platform.h
Source/SysVita/Input/: InputManagerVita.cpp
Source/SysVita/UI/: DownloaderScreen.cpp  InGameMenuScreen.cpp  MainMenuScreen.cpp  MainMenuScreen.h  Menu.h  MenuBarScreen.cpp  TranslationStrings.cpp
Source/SysVita/Utility/: IOVita.cpp  ThreadVita.cpp  TimingVita.cpp
Source/System/: System.cpp  System.h
Source/Test/: BatchTest.cpp  BatchTest.h
Source/Utility/: Alignment.h  AtomicPrimitives.h  DaedalusTypes.h  FastMemcpy.cpp  FastMemcpy.h  FramerateLimiter.cpp  FramerateLimiter.h  Functor.h  Hash.cpp  IO.h  MemoryHeap.cpp  MemoryHeap.h  MemoryPool.cpp  MemoryPool.h  Mutex.h  Preferences.cpp  Profiler.cpp  Profiler.h  ROMFile.cpp  ROMFileCompressed.h  ROMFileNetwork.cpp  ROMFileNetwork.h  Timer.cpp  Timer.h  Translate.cpp  VolatileMem.h  ZLibWrapper.cpp  stb_image.h  stb_image_write.h
Source/minizip/: unzip.c
(+67 files in other folders)
